updating shinytropfish: report as doc,html, pdf; explo can be skipped; informative errors

--- a/ShinyTropFish/apps/report/assessmentReport.Rmd
+++ b/ShinyTropFish/apps/report/assessmentReport.Rmd
@@ -15,6 +15,9 @@ output:
         toc: true
         toc_depth: 2
         highlight: tango
+    word_document:
+        toc: true
+        toc_depth: 2
 params:
   rv: NA
 bibliography: "`r file.path(tempdir(), 'TropFishR.bib')`"
